tests/dataset/job/compiler/c/q23.error
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c: In function ‘test_Q23_finds_US_internet_movie_with_verified_cast’:
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:390:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  390 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:397:15: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  397 |           tmp1.data[i3]) {
      |               ^
      |               ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:460:30: warning: implicit declaration of function ‘matches_item_list_t_create’ [-Wimplicit-function-declaration]
  460 |   matches_item_list_t tmp4 = matches_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:461:20: error: ‘(complete_cast_t *)&complete_cast’ is a pointer; did you mean to use ‘->’?
  461 |       complete_cast.len * comp_cast_type.len * title.len * kind_type.len *
      |                    ^
      |                    ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:461:41: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  461 |       complete_cast.len * comp_cast_type.len * title.len * kind_type.len *
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:461:53: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  461 |       complete_cast.len * comp_cast_type.len * title.len * kind_type.len *
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:461:69: error: ‘(kind_type_t *)&kind_type’ is a pointer; did you mean to use ‘->’?
  461 |       complete_cast.len * comp_cast_type.len * title.len * kind_type.len *
      |                                                                     ^
      |                                                                     ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:462:17: error: ‘(movie_info_t *)&movie_info’ is a pointer; did you mean to use ‘->’?
  462 |       movie_info.len * info_type.len * movie_keyword.len * keyword.len *
      |                 ^
      |                 ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:462:33: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  462 |       movie_info.len * info_type.len * movie_keyword.len * keyword.len *
      |                                 ^
      |                                 ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:462:53: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  462 |       movie_info.len * info_type.len * movie_keyword.len * keyword.len *
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:462:67: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  462 |       movie_info.len * info_type.len * movie_keyword.len * keyword.len *
      |                                                                   ^
      |                                                                   ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:463:22: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  463 |       movie_companies.len * company_name.len * company_type.len);
      |                      ^
      |                      ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:463:41: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  463 |       movie_companies.len * company_name.len * company_type.len);
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:463:60: error: ‘(company_type_t *)&company_type’ is a pointer; did you mean to use ‘->’?
  463 |       movie_companies.len * company_name.len * company_type.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:521:49: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  521 |                               contains_string(mi.note, "internet") &&
      |                                               ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:522:50: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  522 |                               (contains_string(mi.info, "USA:") &&
      |                                                ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:523:51: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  523 |                                (contains_string(mi.info, "199") ||
      |                                                 ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:524:51: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  524 |                                 contains_string(mi.info, "200"))) &&
      |                                                 ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:545:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  545 |   int tmp17 = int_create(matches.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:549:10: error: request for member ‘data’ in something not a structure or union
  549 |     tmp17.data[tmp18] = r.movie_kind;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:552:8: error: request for member ‘len’ in something not a structure or union
  552 |   tmp17.len = tmp18;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:557:10: error: request for member ‘data’ in something not a structure or union
  557 |     tmp20.data[tmp21] = r.complete_us_internet_movie;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:560:8: error: request for member ‘len’ in something not a structure or union
  560 |   tmp20.len = tmp21;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:562:44: error: incompatible type for argument 1 of ‘_min_string’
  562 |       (result_t){.movie_kind = _min_string(tmp17),
      |                                            ^~~~~
      |                                            |
      |                                            int
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:563:60: error: incompatible type for argument 1 of ‘_min_string’
  563 |                  .complete_us_internet_movie = _min_string(tmp20)}};
      |                                                            ^~~~~
      |                                                            |
      |                                                            int
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:573:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  573 |     _json_string(it.movie_kind);
      |                  ~~^~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:577:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  577 |     _json_string(it.complete_us_internet_movie);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:581:64: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  581 |   test_Q23_finds_US_internet_movie_with_verified_cast_result = result;
      |                                                                ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:583:13: error: request for member ‘data’ in something not a structure or union
  583 |   free(tmp17.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq232555305483/001/prog.c:584:13: error: request for member ‘data’ in something not a structure or union
  584 |   free(tmp20.data);
      |             ^
